Fix leaf-sidebar z-index, make it on the top

--- a/scss/leaf/_main.scss
+++ b/scss/leaf/_main.scss
@@ -27,7 +27,7 @@ leaf-sidebar {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: 99999;
     @include transform(translate(-100%, 0) translateZ(0));
     @include transition(transform $sidebar-transition-duration $sidebar-transition-function);
     .leaf-sidebar-wrapper {
