--- a/www/css/global.css
+++ b/www/css/global.css
@@ -3850,7 +3850,7 @@ leaf-sidebar {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 99999;
   -webkit-transform: translate(-100%, 0) translateZ(0);
   -moz-transform: translate(-100%, 0) translateZ(0);
   -ms-transform: translate(-100%, 0) translateZ(0);
